--- a/src/index.html
+++ b/src/index.html
@@ -202,6 +202,6 @@
         Snipcart. &copy; 2021
       </div>
     </footer>
-    <script src="./js/bundle.js"></script>
+    <script src="./js/index.js"></script>
   </body>
 </html>
