added completed payment button

--- a/src/index.html
+++ b/src/index.html
@@ -126,7 +126,7 @@
             <div class="spinner hidden"></div> <span> Complete Payment </span>
           </button>
 
-          <button class="btn-cta mt-small btn-payment-completed"> 
+          <button class="btn-cta mt-small btn-payment-completed hidden"> 
             <span class="text-completed">Payment successfuly Completed!</span>
             <span class="text-continue"> <svg><use xlink:href="./img/arrow.svg#arrow" /></svg> Continue shopping</span>
           </button>
