working test payment

--- a/src/index.html
+++ b/src/index.html
@@ -123,12 +123,12 @@
             <h6 class="checkout__heading summary__heading">Payment</h6>
           </div>
 
-          <form class="checkout__form" id="payment-form" method="POST">
+          <form class="checkout__form hidden" id="payment-form" method="POST">
               <div id="card-frame">
                 <!-- Yoco Inline form will be added here -->
               </div>
               <button id="pay-button" class="btn-cta mt-small btn-complete-payment hidden"> 
-                <div class="spinner hidden"></div>Pay <span></span>
+                <div class="spinner hidden"></div><span></span>
               </button>
           </form>
 
